# junior_data_engineer_task

./: .gitignore  Readme.md  pyproject.toml  solution.py
